welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:7: error: reassignment to val
			nbPas=nbPas+1
                             ^