welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def  move(nbPas: Int,versLAvant: Boolean)
{
	
		if(nbPas<6)
		{
			nbPas=nbPas+1
			
			if(versLAvant)
			{
			avance()	
			}

         			 else
        	 		  {
     			  recule()
        			  }
		}
		return versLAvant
}